--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -64,6 +64,8 @@
 
   <!-- Page Specific JS -->
   <script src="/assets/js/app.js"></script>
+  <script src="assets/plugins/chart.js/chart.min.js"></script> 
+  <script src="assets/js/charts-demo.js"></script> 
 
   <!-- jQuery -->
   <script src="/assets_user/js/jquery-2.1.0.min.js"></script>
